--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery.ajax-progress.js"></script>
     <script src="js/main.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main>
