Made 'no results' div hidden by default

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </ul>
         
-        <div id="no-results">
+        <div id="no-results" class="hidden">
           <span>No results found</span>
         </div>
         
