Fixed 'unsupported' message showing up on supported platforms

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </div>
     </main>
     
-    <div id="not-supported">
-      <span>Unfortunately, your device is currently unsupported due to the intensive requirements of this webpage.</span>
+    <div id="not-supported" class="hidden">
+      <span>Unfortunately, your device is currently unsupported due to the intensive requirements of this webpage. Please use a computer instead.</span>
     </div>
     
   </body>
